--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -5,15 +5,16 @@
     letter-spacing: 0.5px;
     line-height: 50px;
     padding: 0 35px 0 35px;
-    font-size: 15px;
+    font-size: 10px;
     background-color: black;
     color: white;
     text-transform: uppercase;
-    font-family: 'Open Sans Condensed';
+    // font-family: 'Open Sans Condensed';
     font-weight: bolder;
     border: none;
     cursor: pointer;
     transition: 0.3s;
+    border-radius: 5px;
 
     &:hover {
         background-color: white;
