--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,30 @@
-body {
-  font-family: 'Open Sans', sans-serif;
-  padding: 20px 60px;
+/* ::-webkit-scrollbar {
+  display: none;
+} */
+::-webkit-scrollbar {
+  width: 6px;
+  background-color: #F5F5F5;
 }
-
-a {
-  text-decoration: none;
-  color: black;
+::-webkit-scrollbar-thumb {
+  background-color: #000000;
+}
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  background-color: #F5F5F5;
 }
 
 * {
   box-sizing: border-box;
+}
+
+body {
+  font-family: 'Open Sans', sans-serif;
+  padding: 20px 60px;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+a {
+  text-decoration: none;
+  color: black !important;
 }
